@@ -1,3 +1,7 @@
+2010-10-09 Homer Xing <homer.xing@gmail.com>
+
+    * Edit Fedora repositories
+
 2010-10-08 Homer Xing <homer.xing@gmail.com>
 
 	* If user reply "yes" to "no warranty" dialog, do not display that dialog any more.
